--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -21,9 +21,8 @@
 		<div class="inner clearfix">
 			<h1><a href="{{ base_url }}">{{ site_title }}</a></h1>
 			<ul class="nav">
-				{% for page in pages %}
-				<li><a href="{{ page.url }}">{{ page.title }}</a></li>
-				{% endfor %}
+				<li><a href="/pico/index">Home</a></li>
+				<li><a href="/pico/docs">Documentation</a></li>
 			</ul>
 		</div>
 	</header>
