--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -21,8 +21,8 @@
 		<div class="inner clearfix">
 			<h1><a href="{{ base_url }}">{{ site_title }}</a></h1>
 			<ul class="nav">
-				<li><a href="/pico/index">Home</a></li>
-				<li><a href="/pico/docs">Documentation</a></li>
+				<li><a href="/index">Home</a></li>
+				<li><a href="/docs">Documentation</a></li>
 			</ul>
 		</div>
 	</header>
