--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -2,17 +2,17 @@
 <html lang="en" class="no-js">
 <head>
 	<meta charset="utf-8" />
-	
+
 	<title>{% if meta.title %}{{ meta.title }} | {% endif %}{{ site_title }}</title>
 {% if meta.description %}
-	<meta name="description" content="{{ meta.description }}"> 
+	<meta name="description" content="{{ meta.description }}">
 {% endif %}{% if meta.robots %}
 	<meta name="robots" content="{{ meta.robots }}">
 {% endif %}
-	
+
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" type="text/css" />
 	<link rel="stylesheet" href="{{ theme_url }}/style.css" type="text/css" />
-	
+
 	<script src="{{ theme_url }}/scripts/modernizr-2.6.1.min.js"></script>
 </head>
 <body>
@@ -22,7 +22,8 @@
 			<h1><a href="{{ base_url }}">{{ site_title }}</a></h1>
 			<ul class="nav">
 				<li><a href="/index">Home</a></li>
-				<li><a href="/docs">Documentation</a></li>
+                                <li><a href="/docs">Documentation</a></li>
+                                <li><a href="/download">Download</a></li>
 			</ul>
 		</div>
 	</header>
@@ -32,12 +33,12 @@
 			{{ content }}
 		</div>
 	</section>
-	
+
 	<footer id="footer">
 		<div class="inner">
 			GraphWalker is a <a href="http://opensource.org/licenses/MIT">MIT lincensed</a> <a href="http://opensource.org">Open Soure project</a>, hosted on <a href="https://github.com/GraphWalker/">github.com/GraphWalker</a>.
 		</div>
 	</footer>
-    
+
 </body>
 </html>
