--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -24,7 +24,7 @@
 				<li><a href="/index">Home</a></li>
                                 <li><a href="/docs">Documentation</a></li>
                                 <li><a href="/download">Download</a></li>
-                                <li><a href="/contact">Download</a></li>
+                                <li><a href="/contact">Contact</a></li>
 			</ul>
 		</div>
 	</header>
