--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -25,6 +25,7 @@
                                 <li><a href="/docs">Documentation</a></li>
                                 <li><a href="/download">Download</a></li>
                                 <li><a href="/contact">Contact</a></li>
+                                <li><a href="/news">News</a></li>
 			</ul>
 		</div>
 	</header>
