Fixed bug: Link was wrong

--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -26,7 +26,7 @@
                                 <li><a href="/download">Download</a></li>
                                 <li><a href="/contact">Contact</a></li>
                                 <li><a href="/news">News</a></li>
-				<li><a href="/news">License</a></li>
+				<li><a href="/license">License</a></li>
 			</ul>
 		</div>
 	</header>
