Fix for issue 4

--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -39,7 +39,7 @@
 
 	<footer id="footer">
 		<div class="inner">
-			GraphWalker is a <a href="http://opensource.org/licenses/MIT">MIT lincensed</a> <a href="http://opensource.org">Open Soure project</a>, hosted on <a href="https://github.com/GraphWalker/">github.com/GraphWalker</a>.
+			GraphWalker is a <a href="http://opensource.org/licenses/MIT">MIT licensed</a> <a href="http://opensource.org">Open Soure project</a>, hosted on <a href="https://github.com/GraphWalker/">github.com/GraphWalker</a>.
 		</div>
 	</footer>
 
